# candybowl

./: .gitignore  README.md  devenv.nix  justfile  pyproject.toml
apps/: main.py
backend/apps/: main.py
backend/backend/ai/: chat.py
backend/backend/ai/tools/: bank.py  inventory.py  notes.py  supplier.py
backend/backend/routes/: app.py  chat.py
candybowl/: ai.py  amazon.py  discord.py  inventory.py  notes.py
candybowl/ai/: chat.py
candybowl/ai/tools/: bank.py  inventory.py  notes.py  supplier.py
chatbot/apps/: main.py
chatbot/chatbot/: discord.py
